# Grigorify

./: .gitignore  Makefile  README.md  pyproject.toml
src/: grigorify.py
