[project]
name = "grigorify"
version = "0.0.1"
authors=[{name = "Qullègues of Grigori"}]

description='Grigorify package'
readme="README.md"
classifiers=['Programming Language :: Python :: 3', 'Topic :: Artistic Software']
dependencies=['myqlm', 'IPython', 'rich']

[project.scripts]
grigorify = "grigorify:main"
